(12/03/07)
*** Added -runid parameter that specifies the run identifier on the command
    line, rather than having it automatically generated. This must
    be unique for every invocation of a workflow and is used in several
    places to keep files from different executions cleanly separated. By
    default, a datestamp and random number are used to generate a run
    identifier. When using this parameter, care should be taken to ensure
    that the run ID remains unique with respect to all other run IDs that
    might be used, irrespective of (at least) expected run location,
    workflow or user.

(11/23/07)
*** new parameter, execution.retries to specify the number of time a job
    will be retried if it fails (giving a maximum of 1 + execution.retries
    attempts at execution)

*** Added filesystem site catalog element. Looks like 'execution' and
    allows, for example, SSH to be used for remote filesystem access.

(11/20/07)

*** Many unused fields in the sites catalog, sites.xml, are now optional.

*** Nested statement blocks are no longer supported. These saw little use
    and were buggy.

(11/01/07)

*** Concurrent mapper now generates filenames in a relatively deep directory
    hierarchy in order to reduce the number of files in each directory.
    There is a (hard-coded) parameter which determines how many files and
    subdirectories will be permitted at each level. This parameter is set
    to 25.

*** move various job related directories into subdirs on site-side.
    at present, the subdirs are named by a single digit directory.

(10/31/07)

*** Added an external mapper to allow invoking a script to do the
    actual mapping

(10/08/07)

*** Added readData function

(10/03/07)

*** Profile names/keys in tc.data are now case insensitive

(10/02/07)

*** Swift 0.3 release candidate 1 built from swift svn r1312, cog r1769

(09/28/07)

*** Clustering is now disabled by default.
